--- a/thesis/appendices/protocol/searchengines.tex
+++ b/thesis/appendices/protocol/searchengines.tex
@@ -1,9 +1,9 @@
-\chapter{Search Engines and Search Strings}
+\section{Search Engines and Search Strings}
 %TODO: Write about the different what kind of results the different search engines gave with differet search terms. (With and without graph database)
-%Ref: https://raw.githubusercontent.com/sandsmark/slr-scbw/master/sections/search_engines.tex
+%Ref: https://raw.githubusercontent.com/sandsmark/slr-scbw/master/subsections/search_engines.tex
 
 %ACM library
-\section{ACM digital library}
+\subsection{ACM digital library}
 \textbf{Search strings used:}
 \begin{itemize}
 \item String 1 (the same string that gave the best result in IEEE Xplore): 
@@ -33,7 +33,7 @@
 \end{itemize}
 
 %ScienceDirect
-\section{ScienceDirect}
+\subsection{ScienceDirect}
 Qoute Sandsmark: ScienceDirect is an aggregator of articles and other sources for a wide range of domains, including finances and medicine, as well as computer science.
 \par Only searched in publications in the subject of computer science.
 Papers published between 1970 and now.
@@ -80,7 +80,7 @@ Papers published between 1970 and now.
 \end{itemize}
 
 %CiteSeer
-\section{CiteSeer}
+\subsection{CiteSeer}
 \textbf{Search strings used:}
 \begin{itemize}
 \item String 1 (Used the query with the most results from the previous search engine.)
@@ -115,7 +115,7 @@ Date of search: 30.10.2014
 
 
 %SpringerLink
-\section{SpringerLink}
+\subsection{SpringerLink}
 \textbf{Search strings used:}
 \begin{itemize}
 \item String 1 (Used the best query from the previous search engine, and this gave a good result.)
@@ -140,7 +140,7 @@ Date of search: 03.11.2014
 
 
 %Google Scholar
-\section{Google Scholar}
+\subsection{Google Scholar}
 Google scholar does not accept long queries. The result is all the queries/results combined.
 \par\par
 \textbf{Search strings used:}
@@ -226,7 +226,7 @@ Date of search: 03.11.2014
 \end{itemize}
 
 %Web of Knowledge
-\section{Web of Knowledge}
+\subsection{Web of Knowledge}
 In Web of Knowledge you cannot perform at full text search, and must choose to search in “Topic”, “Title”, “Author”, “Author Identifiers”, “Editor”, “Group Author”, “Publication Name”, “DOI” or “Year Published”. We decided to use “Topic”, “Title” and “Publication Name” because the seemed most relevant to our search terms. Non of our search terms gave any results when we searched for “Publication Name”. Only some of the search terms gave results when we searcher for “Title”. The fifth result is considered the best, and in this search we used the exact same search terms as in the forth search, but we chose to only search in articles from the research area “Computer Science”. 
 \newline
 \textbf{Search strings used:}
@@ -293,7 +293,7 @@ Date of search: 03.11.2014
 \end{itemize}
 
 %IEEExplore
-\section{IEEE Xplore}
+\subsection{IEEE Xplore}
 IEEE Xplore allows the option to search for either full text or metadata only. After reviewing the results, we see tat the retrieved papers from full text includes alot more than just research papers, e.g conference proceedings. When searching for metadata only instead (which searches within abstract, title and indexing terms), the results become more relevant. IEEE Xplore allows a maximum of 15 search terms, so we had to be selective with the terms and therefore only include the terms we think is the most relevant for out thesis. In addition, IEEE Xplore only retrieve papers from 2000 to 2014.
 \newline
 \textbf{Search strings used:}
