--- a/thesis/appendices/protocol/searchenginesvol2.tex
+++ b/thesis/appendices/protocol/searchenginesvol2.tex
@@ -1,11 +1,10 @@
-\chapter{Search Engines and Search Strings}
-\label{appendixB}
+\section{Search Engines and Search Strings}
 %TODO: Write about the different what kind of results the different search engines gave with differet search terms. (With and without graph database)
-%Ref: https://raw.githubusercontent.com/sandsmark/slr-scbw/master/sections/search_engines.tex
-In this structured literature review we decided to do searches in seven different search engines. The process of deciding which search engines to use was strongly influenced by the paper about how to do a structured literature \citep{kofod2014}. The complete search term [section~\ref{searchterm}] is built up of terms from seven different groups. In addition to the search of the complete search term from section, a search consisting of one additional group (group 8) was done in each of the different search engines. Group 8 consists of the words ``neo4j'' and ``graph database''. This additional search was done to investigate if the combination of swarm technology and graph databases to solve a route optimization problem was already studied. The results from our search shows that our search term combined with ``neo4j'' or ``graph database'' gave zero findings. 
+%Ref: https://raw.githubusercontent.com/sandsmark/slr-scbw/master/subsections/search_engines.tex
+In this structured literature review we decided to do searches in seven different search engines. The process of deciding which search engines to use was strongly influenced by the paper about how to do a structured literature \citep{kofod2014}. The complete search term [subsection~\ref{searchterm}] is built up of terms from seven different groups. In addition to the search of the complete search term from subsection, a search consisting of one additional group (group 8) was done in each of the different search engines. Group 8 consists of the words ``neo4j'' and ``graph database''. This additional search was done to investigate if the combination of swarm technology and graph databases to solve a route optimization problem was already studied. The results from our search shows that our search term combined with ``neo4j'' or ``graph database'' gave zero findings. 
 
 
-\section{ACM Digital Library}
+\subsection{ACM Digital Library}
 \textbf{Notes:} ACM Digital Library did not support a mix of ANDs and ORs in its initial input field, but this was possible in advanced search. The search string was not modified, and the first search gave a satisfactory number of results. 
 \newline
 \newline
@@ -22,7 +21,7 @@ In this structured literature review we decided to do searches in seven differen
 \par \textbf{Results:} 0
 
 
-\section{ScienceDirect}
+\subsection{ScienceDirect}
 \textbf{Notes:} In ScienceDirects advanced search it was only possible to perform a full text search. The first search was within ``all sciences'' and this retrieved 100 results. The next search was therefore just within ``Computer Science'', which gave less, but a lot more relevant literature. In addition to this books were excluded from the results.
 \newline
 \newline
@@ -39,7 +38,7 @@ In this structured literature review we decided to do searches in seven differen
 \par \textbf{Results:} 0
 
 
-\section{CiteSeer}
+\subsection{CiteSeer}
 \textbf{Notes:} In CiteSeer you cannot perform a search within title, abstract and keywords at the same time. It was therefore conducted a full text search by adding the element text:() to the query.  Some of the retrieved literature had an unknown title with unknown authors, so theese were excluded from the results. 
 \newline
 \newline
@@ -56,7 +55,7 @@ In this structured literature review we decided to do searches in seven differen
 \par \textbf{Results:} 0
  
 
-\section{SpringerLink}
+\subsection{SpringerLink}
 \textbf{Notes:} In SpringerLinks advanced search it was only possible to find literature with either all the words, the exact phrase or at least one of the words in the search string. For this reason the whole boolean search string was used in the initial input field. The first search gave 200 results, so the next search was only conducted within ``computer science'' and ``engineering''. In addition to this only results within ``articles'' were selected.
 \newline
 \newline
@@ -73,7 +72,7 @@ In this structured literature review we decided to do searches in seven differen
 \par \textbf{Results:} 0
 
 
-\section{IEEE Xplore}
+\subsection{IEEE Xplore}
 \par \textbf{Notes:} The search is done in full text, including metadata. The search string had to be changed to fulfill IEEE's criteria that the string only should contain 15 search terms. 
 \newline
 \newline 
@@ -95,7 +94,7 @@ In this structured literature review we decided to do searches in seven differen
 \par \textbf{Date of search:} 2014-11-10 
 
 
-\section{ISI Web of Knowledge}
+\subsection{ISI Web of Knowledge}
 \par \textbf{Notes:} In Web of Knowledge you cannot perform at full text search, and must choose to search in ``Topic'', ``Title'', ``Author'', ``Author Identifiers'', ``Editor'', ``Group Author'', ``Publication Name'', ``DOI'' or ``Year Published''. We decided to use ``Topic'', ``Title'' and ``Publication Name'' because it seemed the most relevant to our search terms. The search was done in ``All databases'', but only in the ``COMPUTER SCIENCE'' research area. The original search string (see table \ref{table:searchterms}) had to be modified, because it gave no results in Web Of Knowledge. A few terms were therefor excluded, and a few AND's were switched with OR's. 
 \newline
 \newline
@@ -111,7 +110,7 @@ In this structured literature review we decided to do searches in seven differen
 \par \textbf{Results:} 0 (Topic) + 0 (Title) + 0 (Publication Name)
 \par \textbf{Date of search:} 2014-11-11 
 
-\section{Google Scholar}
+\subsection{Google Scholar}
 \par \textbf{Notes:} Google Scholar only allows very short search strings, and we were therefor forced to split the query into smaller pieces and do mulitple search, for so to add the results togheter. The original search string had to be modified for making the splitting tolerable and effective. 
 \newline
 \newline
