--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -144,7 +144,7 @@
 \input{chapters/model/methodDescription}
 \input{chapters/model/developmentEnvironment}
 \input{chapters/model/algorithmAssessments}
-\input{chapters/model/routeSetRepresentation}
+%\input{chapters/model/routeSetRepresentation}
 \input{chapters/model/initialization}
 \input{chapters/model/generatingAnts}
 \input{chapters/model/selectingStartNode}
@@ -201,6 +201,7 @@
 
 \begin{appendices}
 \input{appendices/protocol/finalprotocol}
+%\input{appendices/protocol/searchterm}
 \input{appendices/protocol/searchenginesvol2}
 \input{appendices/inputData}
 \input{appendices/experimentsResultsAppendix}
