--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -94,6 +94,25 @@
 
 \section{Performance Comparison Results}
 \label{sec:performanceComparisonAppendix}
+
+For the route set representation, a two dimensional array is used. In the route set representation presented in Table \vref{table:routeSetRepr}, Route 1 starts from node 14, continues to node 10, and so on. The maximal numbers of nodes in a route, $R_{max}$, is sat to 8. Route 3 and Route 4 consists of less than 8 nodes. This happens because the ant has reached a node were there are no edges to walk without violating Constraint \vref{itm:constraintCycles}.
+
+%Best Ants Route: {[14,13,11,10,8,6,15,7,][1,2,3,6,8,10,11,12,][14,10,8,6,4,5,2,3,][9,15,7,10,11,12,4,2,]}
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|l|llllllll|}
+    \hline
+    Route 1: & 14 & 13 & 11 & 10 & 8 & 6 & 15 & 7 \\
+    Route 2: & 1 & 2 & 3 & 6 & 8 & 10 & 11 & 12 \\
+    Route 3: & 14 & 10 & 8 & 6 & 4 & 5 & 2 & 3 \\
+    Route 4: & 9 & 15 & 7 & 10 & 11 & 12 & 4 & 2 \\
+    \hline
+    \end{tabular}
+    \caption {Representation of the best route set, having four routes, constructed by the proposed algorithm.}
+    \label{table:performanceComparison_bestRouteSet4}
+\end{table}
+
+
 %Best Ants Route: {[6,8,15,7,10,11,12,4,][1,2,3,6,8,15,9,][1,2,4,12,11,13,14,10,][1,2,5,4,6,8,10,11,]}
 \begin{table}[H]
     \centering
@@ -134,5 +153,60 @@
    % 100 Monte Carlo runs
     \label{table:performanceComparison_ACOFull}
     \end{table}
+
+%Best Ants Route: {[12,11,10,13,14,][9,15,7,10,14,13,11,12,][7,10,8,6,4,5,2,3,][1,2,3,6,8,10,11,13,][1,2,4,6,3,][14,13,10,7,15,6,4,12,]}
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|l|l l l l l l l l|}
+    \hline
+    Route 1: & 12 & 11 & 10 & 13 & 14 & - & - & - \\
+    Route 2: & 9 & 15 & 7 & 10 & 14 & 13 & 11 & 12 \\
+    Route 3: & 7 & 10 & 8 & 6 & 4 & 5 & 2 & 3 \\
+    Route 4: & 1 & 2 & 3 & 6 & 8 & 10 & 11 & 13 \\
+    Route 5: & 1 & 2 & 4 & 6 & 3 & - & - & - \\
+    Route 6: & 14 & 13 & 10 & 7 & 15 & 6 & 4 & 12 \\
+    \hline
+    \end{tabular}
+    \caption {The best route set, having six routes, constructed by the proposed algorithm.}
+    \label{table:performanceComparison_bestRouteSet6}
+\end{table}
+
+%Best Ants Route: {[12,11,10,8,6,4,5,2,][9,15,7,10,14,13,11,12,][11,12,4,5,2,3,6,8,][12,11,10,8,6,3,2,4,][4,6,15,7,10,13,14,][13,10,14,][1,2,3,6,8,10,14,13,]}
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|l|l l l l l l l l|}
+    \hline
+    Route 1: & 12 & 11 & 10 & 8 & 6 & 4 & 5 & 2 \\
+    Route 2: & 9 & 15 & 7 & 10 & 14 & 13 & 11 & 12 \\
+    Route 3: & 11 & 12 & 4 & 5 & 2 & 3 & 6 & 8 \\
+    Route 4: & 12 & 11 & 10 & 8 & 6 & 3 & 2 & 4 \\
+    Route 5: & 4 & 6 & 15 & 7 & 10 & 13 & 14 & - \\
+    Route 6: & 13 & 10 & 14 & - & - & - & - & - \\
+    Route 7: & 1 & 2 & 3 & 6 & 8 & 10 & 14 & 13 \\
+    \hline
+    \end{tabular}
+    \caption {The best route set, having seven routes, constructed by the proposed algorithm. }
+    \label{table:performanceComparison_bestRouteSet7}
+\end{table}
+
+%Best Ants Route: {[11,10,8,6,3,2,1,][13,14,10,7,15,9,][5,4,12,11,10,7,15,6,][11,10,8,6,3,2,5,4,][10,7,15,6,3,2,4,5,][9,15,7,10,11,13,14,][13,14,10,8,6,4,5,2,][5,4,2,3,6,8,15,7,]}
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|l|l l l l l l l l|}
+    \hline 
+    Route 1: & 11 & 10 & 8 & 6 & 3 & 2 & 1 & - \\
+    Route 2: & 13 & 14 & 10 & 7 & 15 & 9 & - & - \\
+    Route 3: & 5 & 4 & 12 & 11 & 10 & 7 & 15 & 6 \\
+    Route 4: & 11 & 10 & 8 & 6 & 3 & 2 & 5 & 4 \\
+    Route 5: & 10 & 7 & 15 & 6 & 3 & 2 & 4 & 5 \\
+    Route 6: & 9 & 15 & 7 & 10 & 11 & 13 & 14 & - \\
+    Route 7: & 13 & 14 & 10 & 8 & 6 & 4 & 5 & 2 \\
+    Route 8: & 5 & 4 & 2 & 3 & 6 & 8 & 15 & 7 \\
+    \hline
+    \end{tabular}
+    \caption {The best route set, having eight routes, constructed by the proposed algorithm. }
+    \label{table:performanceComparison_bestRouteSet8}
+\end{table}
 
 
