--- a/thesis/appendices/protocol/finalprotocol.tex
+++ b/thesis/appendices/protocol/finalprotocol.tex
@@ -8,16 +8,16 @@
 
 \subsection{Defining the Problem}
 \label{sec:researchQSLR}
-To conduct a structured literature review it is vital to decide the problem to be solved, vreferred to as P, and the constraints used to guide the search, vreferred to as C.
+To conduct a structured literature review it is vital to decide the problem to be solved, referred to as P, and the constraints used to guide the search, referred to as C.
 \newline
 \newline
-One of the goals for the environment package for transportation in Trondheim, ``Miljøpakken'', is to reduce percentage of people travelling with cars from 58 \% to 50 \% by 2018 \citep{website:miljopakken}. If this goal is reached, it will be an increased need for public transportation in Trondheim. There has never been done any optimization of the bus routes in Trondheim, the existing solution is purely based on experience. The problem formulation for this thesis was thevrefore based on the idea to improve todays solution by optimizing the bus routes using AI-methods. (And as a result of this satisfy the same amount of users today with less resources.)
+One of the goals for the environment package for transportation in Trondheim, ``Miljøpakken'', is to reduce percentage of people traveling with cars from 58 \% to 50 \% by 2018 \citep{website:miljopakken}. If this goal is reached, it will be an increased need for public transportation in Trondheim. There has never been done any optimization of the bus routes in Trondheim, the existing solution is purely based on experience. The problem formulation for this thesis was therefore based on the idea to improve todays solution by optimizing the bus routes using AI-methods. 
 
 \begin{itemize}
-\item \textbf{P:} “Optimizing the bus routes in Trondheim using AI-methods. “ This problem can be characterized as a \textit{General Pickup and Delivery Problem (GPDP)} \citep[p.22-25]{vehiclerouting}.  
+\item \textbf{P:} Optimizing the bus routes in Tronheim using AI-methods. % This problem can be characterized as a \textit{General Pickup and Delivery Problem (GPDP)} \citep[p.22-25]{vehiclerouting}.  
 \item \textbf{C:} 
     \begin{enumerate}
-        \item To optimize the bus routes in Trondheim we wanted to explore the possibility using methods from swarm intelligence. This idea came from an initial, non-structured literature review were we did a broad search among different artificial intelligence methods and route optimizing. %Todo: Kanskje skrive litt mer om dette? Evt. sitere noe literatureshit
+        \item To optimize the bus routes in Trondheim we wanted to explore the possibility using methods from swarm intelligence. This idea came from an initial, non-structured literature review were we did a broad search among different artificial intelligence methods and route optimizing. %Todo: Kanskje skrive litt mer om dette? Evt. sitere noe literatureshit Hva med SI?
         \item We believe that a part of solving the problem, P, is how we choose to represent the network of the bus routes in Trondheim. The chosen algorithms to optimize the routes with respect to minimize the number of resources used will use this representation. We have some experience with the graph database Neo4j. Neo4j has several benefits that we believe we can take advantage of when solving P, including a natural node-edge-structure and the possibility of saving information to both the nodes and edges. We envision that the nodes will represent bus stops, and the edges will represent the connectivity between the stops. 
     \end{enumerate}
 \end{itemize}
@@ -33,7 +33,7 @@ One of the goals for the environment package for transportation in Trondheim, ``
 \begin{enumerate}[label=\textbf{\arabic*})]
 \item 
     \begin{enumerate}
-    \item[RQ 1: ] What is the state-of-the-art in solving vehicle routing problems using swarm intelligence methods and graph databases?
+    \item[RQ 1:] What is the state-of-the-art in solving vehicle routing problems using swarm intelligence methods and graph databases?
     \end{enumerate}
 \end{enumerate}
 
@@ -88,9 +88,10 @@ The search terms and the groups of synonyms were assembled into a complete searc
 
 %Todo: Skrive om Zotero
 
+
 \subsection{Inclusion Criteria}
 \label{sec:inclusionCriteria}
-To exclude irrelevant literature, some inclusion criterias were decided to ensure a level of relevance to the very first pool. First of all, duplicate literature, book of chapters, book of abstracts, book of vreferences, literature not written in english, books, and literature with cleary irrelevant titles (for example literature from different research areas) were removed based on title. After that, we decided to filter out relevant literature based on the abstracts. Because we had relatively many sources to related literature after the initial filtering (367), we decided that we wanted the abstracts (or the keyword subsection) to explicitly mention swarm intelligence or algorithms associated with swarm intelligence, while it also described a problem connected to vehicle routing. For our literature review we decided to use the inclusion criterias solely on the title, abstract and keywords. After a discussion and reading a few abstracts we landed on the following inclusion criterias:
+The list of sources for retrieving relevant literature with the corresponding results is found in Section \vref{sec:searchEngines}. To exclude irrelevant literature, some inclusion criterias were decided to ensure a level of relevance to the very first pool. First of all, duplicate literature, book of chapters, book of abstracts, book of vreferences, literature not written in english, books, and literature with cleary irrelevant titles (for example literature from different research areas) were removed based on title. After that, we decided to filter out relevant literature based on the abstracts. Because we had relatively many sources to related literature after the initial filtering (367), we decided that we wanted the abstracts (or the keyword subsection) to explicitly mention swarm intelligence or algorithms associated with swarm intelligence, while it also described a problem connected to vehicle routing. For our literature review we decided to use the inclusion criterias solely on the title, abstract and keywords. After a discussion and reading a few abstracts we landed on the following inclusion criterias:
 \begin{itemize}
 \item The main concern is route optimization focusing on vehicles. 
 \item The study focuses on the use of swarm intelligence.
@@ -102,7 +103,7 @@ To exclude irrelevant literature, some inclusion criterias were decided to ensur
 After the inclusion criteria filtering, we had 42 sources to related literature, including scientific papers and master theses. 
 
 \subsection{Quality Criteria} 
-
+The Quality Criteria was determined to ensure quality in the final papers and to filter away studies not theoretical relevant for our thesis, and are the following:
 \begin{enumerate}
 \item \label{itm:qa1}How relevant is it?
 \begin{enumerate}
