--- a/thesis/appendices/protocol/searchenginesvol2.tex
+++ b/thesis/appendices/protocol/searchenginesvol2.tex
@@ -1,4 +1,5 @@
 \section{Search Engines and Search Strings}
+\label{sec:searchEngines}
 %TODO: Write about the different what kind of results the different search engines gave with differet search terms. (With and without graph database)
 %Ref: https://raw.githubusercontent.com/sandsmark/slr-scbw/master/subsections/search_engines.tex
 In this structured literature review we decided to do searches in seven different search engines. The process of deciding which search engines to use was strongly influenced by the paper about how to do a structured literature \citep{kofod2014}. The complete search term [subsection~\ref{searchterm}] is built up of terms from seven different groups. In addition to the search of the complete search term from subsection, a search consisting of one additional group (group 8) was done in each of the different search engines. Group 8 consists of the words ``neo4j'' and ``graph database''. This additional search was done to investigate if the combination of swarm technology and graph databases to solve a route optimization problem was already studied. The results from our search shows that our search term combined with ``neo4j'' or ``graph database'' gave zero findings. 
