--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -192,6 +192,7 @@
 \input{chapters/evaluationAndConclusion/discussion}
 \input{chapters/evaluationAndConclusion/performanceComparisonDiscussion}
 \input{chapters/evaluationAndConclusion/networkExpansionDiscussion}
+\input{chapters/evaluationAndConclusion/runTimeDiscussion}
 %\input{chapters/evaluationAndConclusion/discussingSSO}
 %\input{chapters/evaluationAndConclusion/discussingScalabilityV2}
 \input{chapters/evaluationAndConclusion/conclusion}
