--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,12 @@
+@article{stutzle06,
+    author    = "Thomas Stützle and Holger H. Hoos",
+    title     = "MAX–MIN Ant System",
+    journal   = "Future Generation Computer Systems, vol. 16, no. 8",
+    pages     = "889-914",
+    year      = "2006",
+}
+
+
 @article{dorigo06,
     author    = "Marco Dorigo and Mauro Birattari and Thomas Stützle",
     title     = "Ant Colony Optimization: Artificial Ants as a Computational Intelligence Technique",
