some fixing regarding graph database

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -6,7 +6,6 @@
     year      = "2006",
 }
 
-
 @article{dorigo06,
     author    = "Marco Dorigo and Mauro Birattari and Thomas Stützle",
     title     = "Ant Colony Optimization: Artificial Ants as a Computational Intelligence Technique",
@@ -422,13 +421,17 @@
     note = {Accessed: January 2015} 
 }
 @misc{website:neo4j,
+    author = "Neo Technology, Inc.",
     title = "Neo4j",
+    year = "2015",
     howpublished = "\url{http://www.neo4j.com}",
     note = {Accessed: February 2015}  
 }
 @misc{website:graphdbranking,
+    author = "DB-Engines",
     title = "DB-Engines Ranking of Graph DBMS",
     howpublished = "\url{http://db-engines.com/en/ranking/graph+dbms}",
+    year = "2015",
     note = {Accessed: March 2015}      
 }
 @misc{website:amazon,
@@ -458,18 +461,24 @@
     note = {Accessed: May 2015}   
 }
 @misc{website:telenor,
+    author = " Telenor ASA",
     title = "Telenor",
     howpublished = "\url{http://www.telenor.no/}",
+    year = "2015",
     note = {Accessed: May 2015}   
 }
 @misc{website:cisco,
+    author = "Cisco",
     title = "Cisco",
     howpublished = "\url{http://www.cisco.com/}",
+    year = "2015",
     note = {Accessed: May 2015}   
 }
 @misc{website:walmart,
+    author = "Walmart",
     title = "Walmart",
     howpublished = "\url{http://www.walmart.com/}",
+    year = "2015",
     note = {Accessed: May 2015}   
 }
 @misc{website:stackoverflow,
