fixed motivation a bit

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -408,8 +408,10 @@
 }
 
 @misc{website:miljopakken,
+    author = "Miljøpakken",
 	title = "Miljøpakkens mål",
 	howpublished = "\url{http://miljopakken.no/om-miljoepakken/maal}",
+    year = "2014",
     note = {Accessed: November 2014} 
 }
 
