--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -447,8 +447,10 @@
     note = {Accessed: May 2015}   
 }
 @misc{website:google,
+    author="Google",
     title = "Google Cloud Platform: Machine Types",
     howpublished = "\url{https://cloud.google.com/compute/docs/machine-types?hl=en_US&_ga=1.40008804.791529213.1430919997}",
+    year="2015",
     note = {Accessed: May 2015}   
 }
 @misc{website:rutebok,
