small cleanup in model

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -130,7 +130,7 @@
 \input{chapters/introduction/researchMethod}
 \input{chapters/introduction/thesisOverview}
 
-\chapter{Background Theory}
+\chapter{Theory and Background}
 \label{backgroundAndMotivation}
 \input{chapters/backgroundTheoryAndMotivation/backgroundTheoryAndMotivation}
 %\input{chapters/backgroundTheoryAndMotivation/backgroundTheory}
