--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -144,7 +144,7 @@
 \input{chapters/relatedWork/relatedWork}
 \input{chapters/relatedWork/structuredLiteratureReview}
 \input{chapters/relatedWork/relatedWorkVol5}
-%\input{chapters/relatedWork/problemStatement}
+\input{chapters/relatedWork/problemStatement}
 
 \chapter{The Proposed Method}
 \label{theModel}
