--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -141,7 +141,7 @@
 
 \chapter{Preparatory Research}
 \label{relatedWork}
-\input{chapters/relatedWork/relatedWork}
+%\input{chapters/relatedWork/relatedWork}
 \input{chapters/relatedWork/structuredLiteratureReview}
 \input{chapters/relatedWork/relatedWorkVol5}
 \input{chapters/relatedWork/problemStatement}
