--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -436,14 +436,11 @@
     year = "2015",
     note = {Accessed: March 2015}      
 }
-@misc{website:amazon,
-    title = "Amazon {EC2} Instances",
-    howpublished = "\url{http://aws.amazon.com/ec2/instance-types/}", 
-    note = {Accessed: May 2015}   
-}
+
 @misc{website:maven,
     title = "Apache Maven",
-    howpublished = "\url{https://maven.apache.org/}", 
+    howpublished = "\url{https://maven.apache.org/}",
+    year = "2015", 
     note = {Accessed: May 2015}   
 }
 @misc{website:google,
@@ -453,15 +450,12 @@
     year="2015",
     note = {Accessed: May 2015}   
 }
-@misc{website:rutebok,
-    title = "Holdeplasser i Trondheim",
-    howpublished = "\url{http://www.rutebok.no/nriiisstatictables/tables/ruter/kommune/KO001601.htm}",
-    note = {Accessed: May 2015}   
-}
 
 @misc{website:atb-linjenett,
+    author = "AtBs linjenett",
     title = "AtBs linjenett",
     howpublished = "\url{http://no.wikipedia.org/wiki/AtBs_linjenett}",
+    year="2015",
     note = {Accessed: May 2015}   
 }
 @misc{website:telenor,
@@ -486,8 +480,10 @@
     note = {Accessed: May 2015}   
 }
 @misc{website:stackoverflow,
+    author = "Stack Overflow",
     title = "Stack Overflow",
     howpublished = "\url{http://stackoverflow.com/}",
+    year = "2015",
     note = {Accessed: May 2015}   
 }
 
