--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -32,6 +32,7 @@
 }
 \makeatother
 \usepackage{varioref}
+\setlength{\parskip}{1em}
 \usepackage{tabto}
 \usepackage{enumitem} % For abbrevations
 \usepackage{algorithm}
