--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -60,7 +60,7 @@
 % Author
 % Fill in here, and use commands in the text. 
 \newcommand{\thesisAuthor}{Hanne Gunby and Susanne Gustavsen}
-\newcommand{\thesisTitle}{\color{Magenta} The Fairy Tales of the Ant Princesses}
+\newcommand{\thesisTitle}{A Combined Swarm System for the Urban Transit Routing Problem}
 \newcommand{\thesisType}{Masters Thesis}
 \newcommand{\thesisDate}{Spring 2015}
 
