--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -143,11 +143,11 @@ For the route set representation, a two dimensional array is used. In the route 
     ACO Standard Deviation & 4.87 & 3.75 & 1.83 & 0.37 & 0.32\\
     \hline
     \hline
-    SSO Best & 87.73 & 10.98 & 1.28 & 0.00 & 10.03\\
-    SSO Average & 85.21 & 13.49 & 1.30 & 0.00 & 10.27\\
-    SSO Median & 85.81 & 13.29 & 1.09 & 0.00 & 10.26\\
-    SSO Worst & 76.56 & 22.16 & 1.28 & 0.00 & 10.01\\
-    SSO Standard Deviation & 2.66 & 2.70 & 0.84 & - & 0.18\\
+    CSS Best & 87.73 & 10.98 & 1.28 & 0.00 & 10.03\\
+    CSS Average & 85.21 & 13.49 & 1.30 & 0.00 & 10.27\\
+    CSS Median & 85.81 & 13.29 & 1.09 & 0.00 & 10.26\\
+    CSS Worst & 76.56 & 22.16 & 1.28 & 0.00 & 10.01\\
+    CSS Standard Deviation & 2.66 & 2.70 & 0.84 & - & 0.18\\
     \hline
     \end{tabular}
     \caption {Comparing the route sets of ACO and ACO, having four routes, all results}
