preface and acknowjkl

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -1,6 +1,6 @@
 % (C) Anders Kofod-Petersen
 \raggedbottom
-\documentclass[b5paper, twoside, titlepage, 10pt]{report}
+\documentclass[b5paper, twoside, openright, titlepage, 10pt]{report}
 \setcounter{secnumdepth}{3}
 \usepackage[lmargin=25mm,rmargin=25mm,tmargin=27mm,bmargin=30mm]{geometry}
 %\documentclass[11pt, b5paper]{report}
@@ -33,6 +33,8 @@
 \makeatother
 \usepackage{varioref}
 \setlength{\parskip}{1em}
+\setlength\parindent{0pt}
+
 \usepackage{tabto}
 \usepackage{enumitem} % For abbrevations
 \usepackage{algorithm}
